[package]
name = "notifiers"
version = "0.1.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
a2 = { git = "https://github.com/WalletConnect/a2/", branch = "master", optional = true }
anyhow = "1.0.32"
axum = "0.7.5"
base64 = "0.22.1"
chrono = { version = "0.4.41", default-features = false }
femme = "2.1.0"
humantime = "2.0.1"
log = "0.4.11"
pgp = "0.14.2"
prometheus-client = "0.22.2"
rand = "0.8.5"
reqwest = "0.12.4"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.122"
sled = "0.34.2"
structopt = "0.3.15"
tokio = { version = "1.39.2", features = ["full"] }
web-push-native = "0.4.0"
yup-oauth2 = "9.0.0"

[dev-dependencies]
tempfile = "3"

[features]
default = ["apns", "fcm"]
apns = [ "dep:a2" ]
fcm = []
